fix for issue #7: display issues in dark mode

--- a/giant_bomb_qol.css
+++ b/giant_bomb_qol.css
@@ -4,7 +4,6 @@ Previous & Next Videos
 
 #qol_video_navigator {
   display: block;
-  border-top: 1px solid lightgrey;
   height: 46px;
 }
 
@@ -37,10 +36,6 @@ Previous & Next Videos
   float: left;
 }
 
-#qol_prev_vid {
-  border-right: 1px solid lightgrey;
-}
-
 #qol_prev_vid_link > * {
   padding-right: 5px;
 }
@@ -51,6 +46,22 @@ Previous & Next Videos
 
 #qol_next_vid_link > * {
   padding-left: 5px;
+}
+
+.qol-vid-nav-black {
+  border-top: 1px solid #3a3c3c
+}
+
+.qol-vid-nav-white {
+  border-top: 1px solid lightgrey;
+}
+
+.qol-prev-vid-black {
+  border-right: 1px solid #3a3c3c;
+}
+
+.qol-prev-vid-white {
+  border-right: 1px solid lightgrey;
 }
 
 .qol_thumb {
